# AppManagement2022

./: AppData.cpp  AppData.h  Application.cpp  Application.h  CMakeLists.txt  Developer.cpp  Developer.h  Game.cpp  Game.h  Games.cpp  Games.h  MediaPlayer.cpp  MediaPlayer.h  README.md  TypeFile.cpp  TypeFile.h  main.cpp
Class Files/: AppData.cpp  Application.cpp  Developer.cpp  Game.cpp  MediaPlayer.cpp  TypeFile.cpp
Class Headers/: AppData.h  Developer.h  Game.h  MediaPlayer.h  TypeFile.h
